[tool.poetry]
name = "cron_parser"
version = "0.1.0"
description = ""
authors = ["Rhys <rhys.powell@tcs.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
